<resources>
    <string name="app_name">交友</string>
    <string name="message">消息</string>
    <string name="linkman">联系人</string>
    <string name="user">用户</string>
    <string name="extra">更多</string>
    <string name="load">登录</string>
    <string name="new_user">注册</string>
    <string name="id_number">账号</string>
    <string name="password">密码</string>
    <string name="go_back">返回</string>
    <string name="input_user">输入注册信息</string>
    <string name="nickname">用户名</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="boysign">♂</string>
    <string name="girlsign">♀</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="input_search_setext">输入搜索信息</string>
    <string name="people">人</string>
    <string name="group">群</string>
    <string name="friends">好友</string>
    <string name="new_friend">匹配潜在好友</string>
    <string name="zero_per_zero">0/0</string>
    <string name="signature">个性签名</string>
    <string name="setting">设置</string>
    <string name="groupinfo">群介绍</string>
    <string name="require_join_group">加入该群</string>
    <string name="require_add_friend">加为好友</string>
    <string name="delete_join_group">退出该群</string>
    <string name="delete_add_friend">删除好友</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="area">地区</string>
    <string name="sign">签名</string>
    <string name="produce">介绍</string>
    <string name="change_age">修改年龄</string>
    <string name="change_sex">修改性别</string>
    <string name="change_location">修改所在地</string>
    <string name="change_sign">修改签名</string>
    <string name="change_produce">修改介绍</string>
    <string name="question">问题</string>
    <string name="change_question">修改验证问题</string>
    <string name="anwser">答案</string>
    <string name="change_anwser">修改验证答案</string>
    <string name="submit">提交</string>
    <string name="exist">退出登录</string>
    <string name="send">发送</string>
    <string name="send_message">发送消息</string>
    <string name="empty"></string>
    <string name="create_group">创建群</string>
    <string name="input_group_name">输入群名及加群密码</string>
    <string name="hint_group_name">群名</string>
    <string name="hint_group_password">密码</string>
    <string name="apply_enter_group">申请加群</string>
    <string name="group_introduce">群介绍</string>
    <string name="picture">相册</string>
    <string name="camera">照相机</string>
    <string name="sound">语音</string>
    <string name="click_to_record">点击录音</string>
    <string name="source_record_cancel">取消</string>
    <string name="source_record_send">发送</string>
    <string name="source_record_return">返回</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="bloody_type">血型</string>
    <string name="education">学历</string>
    <string name="constellation">星座</string>
    <string name="native_place">籍贯</string>
    <string name="email">邮箱</string>
    <string name="contact_way">联系方式</string>
    <string name="location">所在地</string>
    <string name="real_name">真实姓名</string>
    <string name="occupation">职业</string>
    <string name="other_info">其他信息</string>
    <string name="hobby">爱好</string>
    <string name="change_real_name">修改真实姓名</string>
    <string name="change_occupation">修改职业</string>
    <string name="change_native_place">修改籍贯</string>
    <string name="change_email">修改邮箱</string>
    <string name="change_contact_way">修改联系方式</string>
    <string name="set_friends">设置想匹配的好友要求</string>
    <string name="min_age">年龄下限</string>
    <string name="max_age">年龄上限</string>
    <string name="between_age">&lt;=年龄&lt;=</string>
    <string name="choose_friends">匹配潜在好友</string>
    <string name="home">首页</string>
    <string name="create_activity">创建新的活动</string>
    <string name="activity_name">活动名称</string>
    <string name="choose_start_time">选择活动开始时间</string>
    <string name="choose_end_time">选择活动结束时间</string>
    <string name="activity_place">活动地点</string>
    <string name="activity_person_in_charge">活动负责人</string>
    <string name="activity_contact_way">负责人联系方式</string>
    <string name="activity_content">请输入活动内容</string>
    <string name="activity_max_people">活动最大人数</string>
    <string name="activity_type">活动类型</string>
    <string name="ok">确定</string>
    <string name="activity_start_time">活动开始时间</string>
    <string name="activity_end_time">活动结束时间</string>
    <string name="activity_current_people">活动当前人数</string>
    <string name="activity_enter_people">查看活动参加人员</string>
    <string name="enter_activity">参加活动</string>
</resources>
