<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gray_to_white"
    >
    <ImageView
        android:contentDescription="@string/app_name"
        android:src="@drawable/default_portrait"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingTop="8dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/talk_up"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLength="64"
            android:id="@+id/load_user_id"
            android:gravity="center_vertical"
            android:background="#00000000"
            android:hint="@string/id_number"
            android:textColorHint="#ccc"
            />
        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLength="32"
            android:id="@+id/load_password"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:background="#00000000"
            android:hint="@string/password"
            android:textColorHint="#ccc"
            />
    </LinearLayout>
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/load_user_button"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/load"
        android:textColor="#fff"
        android:background="@drawable/blue_button"
        />
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/load_new_user_button"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/new_user"
        android:textColor="#fff"
        android:background="@drawable/gray_button"
        />

</LinearLayout>
