<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@drawable/bluel_to_bluer"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_gravity="top"

    >
    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/header_portrait"
        android:background="@drawable/header_portrait_shape"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/header_text"
        android:text="@string/message"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/header_extra"
        android:text="@string/extra"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        />

</RelativeLayout>
