<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linkman_friends"
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:background="@drawable/pressed_gray"
    android:paddingLeft="15dp"
    android:paddingStart="15dp"
    android:paddingRight="15dp"
    android:paddingEnd="15dp"
    >
    <ImageView
        android:id="@+id/linkman_friends_arrow"
        android:contentDescription="@string/app_name"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/arrow_right"
        android:scaleType="centerInside"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:text="@string/friends"
        android:layout_toRightOf="@+id/linkman_friends_arrow"
        android:layout_toEndOf="@+id/linkman_friends_arrow"
        android:layout_toLeftOf="@+id/linkman_friends_count"
        android:layout_toStartOf="@+id/linkman_friends_count"
        />
    <TextView
        android:id="@+id/linkman_friends_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#aaa"
        android:textSize="14sp"
        android:layout_centerVertical="true"
        android:text="@string/zero_per_zero"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:maxLength="7"
        />

</RelativeLayout>